# mad_spark_alt

./: .gitignore  AGENTS_ARCHITECTURE.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_FIX_HYPOTHESIS_FORMAT.md  CLAUDE.md  CLI_SDK_DIVERGENCE_ANALYSIS.md  CODEBASE_ANALYSIS.md  COMMANDS.md  DEMONSTRATION.md  DEPRECATED.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  EVOLUTION_TEST_RESULTS.md  EVOLUTION_TIMEOUT_FIX.md  GOOGLE_API_ANALYSIS.md  JSON_CONSOLIDATION_COMPLETE.md  LICENSE  PHASE3_STATUS.md  PR_DESCRIPTION.md  PYDANTIC_MIGRATION_STATUS.md  QADI_README.md  QADI_TOOLS_README.md  README.md  RESEARCH.md  SESSION_HANDOVER.md  TEST_SCRIPTS_README.md  TIMEOUT_ANALYSIS.md  TIMEOUT_FIX.md  TRANSFORMATION_ROADMAP.md  TRAVEL_PLANNING_GUIDE.md  UNIFIED_DEVELOPMENT_PLAN.md  USER_GUIDE.md  USER_TEST_GUIDE.md  adding_features_20251108.md  batch_metrics.json  batch_results_20250728_191419.json  better_idea_generator.py  compare_qadi_approaches.py  custom_config_demo.py  (+65 more)
.Jules/: palette.md
.evolution_checkpoints/: evolution_gen3_20250723_084228.json
.gemini/: styleguide.md
.jules/: bolt.md  sentinel.md
agents/: __init__.py  abduction_agent.py  base_agent.py  llm_client.py  qadi_agents.py
benchmarks/: test_benchmark_20250722_093435.json  test_benchmark_20250722_093736.json
database/: __init__.py  idea_db.py
demos/: advanced_qadi_demo.py  better_longevity_ideas.py  custom_prompt_test.py  focused_api_test.py  google_api_diagnosis.py  improved_qadi_demo.py  qadi_flow_demo.py  qadi_gap_demo.py  quick_idea_generation.py  real_api_test.py  simple_qadi_demo.py
docs/: CHANGELOG.md  (+13 more)
(+306 files in other folders)
