[project]
name = "mad-spark-alt"
version = "0.1.0"
description = "AI Creativity Evaluation System - Multi-layer framework for evaluating AI model creativity"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.20.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
    "python-dotenv>=1.0.0",
]


[project.optional-dependencies]
multimodal = [
    "PyPDF2>=3.0.0,<4.0.0",  # PDF page counting for document processing
]

[project.scripts]
msa = "mad_spark_alt.unified_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
